Modified navbar, faq and added a student qoute.

--- a/mitx/lms/static/sass/shared-v2/_header.scss
+++ b/mitx/lms/static/sass/shared-v2/_header.scss
@@ -462,3 +462,14 @@
         }
     }
 }
+
+.give-btn {
+    a {
+        color: $rouge !important;
+        text-decoration: none !important;
+        &:hover {
+            color: $rouge !important;
+            text-decoration: none !important;
+        }
+    }
+}
