--- a/mitx/lms/static/sass/views/_about.scss
+++ b/mitx/lms/static/sass/views/_about.scss
@@ -220,3 +220,39 @@
         }
     }
 }
+
+.student-quote {
+    font-size: 1.4em;
+    width: 100%;
+    margin:50px auto;
+    font-family: Open Sans;
+    font-style: italic;
+    color: #555555;
+    padding: 1.2em 30px 1.2em 75px;
+    border-left: 8px solid $rouge;
+    line-height: 1.6;
+    position: relative;
+    background:#EDEDED;
+
+        &:before {
+        font-family: Arial;
+        content: "\201C";
+        color: $rouge;
+        font-size:4em;
+        position: absolute;
+        left: 10px;
+        top: -10px;
+      }
+
+      &:after {
+        content: '';
+      }
+
+       span {
+        display: block;
+        color:#333333;
+        font-style: italic;
+        font-weight: bold;
+        margin-top: 1em;
+      }
+}
