--- a/mitx/lms/templates/header/navbar-not-authenticated.html
+++ b/mitx/lms/templates/header/navbar-not-authenticated.html
@@ -43,6 +43,12 @@ from six import text_type
       <div class="mobile-nav-item hidden-mobile nav-item mobile-pad-item">
         <a class="register-btn btn mt0" href="/register${login_query()}">${_("Create Account")}</a>
       </div>
+      <div class="mobile-nav-item nav-item mobile-pad-item give-btn">
+        <a href="https://giving.mit.edu/give/to?fundId=3894990" target="_blank">
+          <img width="30px" height="30px" src="${static.url('images/heart.png')}"/>
+          ${_("Give")}
+        </a>
+      </div>
     </div>
   </div>
 </nav>
