replaced span with a div for author-name under the quote

--- a/mitx/lms/static/sass/views/_about.scss
+++ b/mitx/lms/static/sass/views/_about.scss
@@ -248,8 +248,7 @@
         content: '';
       }
 
-       span {
-        display: block;
+       div {
         color:#333333;
         font-style: italic;
         font-weight: bold;
