--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -127,7 +127,7 @@
                 </section>
                 <blockquote class="student-quote">
                     I cannot overstate the impact that MIT Open Learning has had on my education. I have been a student of MOOCs for several years now, and the courses offered by MIT Open Learning have been some of the most impactful and useful that I have taken. I have been able to take courses on a wide variety of topics, and the quality of the content and the instructors has been consistently excellent. I have also been able to use the courses I have taken to further my career, as many of the topics covered are directly relevant to the work I do. I am extremely grateful to have had the opportunity to take advantage of MIT Open Learning, and I would highly recommend it to anyone who is looking for a high-quality, affordable education.
-                    <span>-Hikmat, Student - College/University, Nepal</span>
+                    <div>-Hikmat, Student - College/University, Nepal</div>
                 </blockquote>
             </div>
             <div class="socialmedia-area">
