Modified navbar, faq and added a student qoute. (#92)
* Modified navbar, faq and added a student qoute.

* replaced span with a div for author-name under the quote

--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -112,8 +112,23 @@
                                 <p>The MIT faculty member responsible for the course makes this decision on a case-by-case basis. This is why you may see different formats for each different course you access in the Open Learning Library. Most often, though, what you will see is the content and assessments that you need to work through in order to learn, while other assessments whose principal purpose is testing whether you have earned a certificate are only available on edX.org, where you can have the opportunity to earn a certificate.</p>
                             </div>
                         </div>
+                        <div class="item">
+                            <div class="accordion-title">Why support Open Learning?</div>
+                            <div class="accordion-content">
+                                <p>
+                                    Each course in the Open Learning Library is a collaborative effort by a team of MIT faculty, educational technologists, media specialists, intellectual property coordinators, digital learning fellows, and others. Gifts to MIT Open Learning directly support the sustainability and production of these courses.<br><br>
+                                    At MIT Open Learning, we are committed to advancing best practices in education, conducting groundbreaking research, and engineering new platforms, like Open Learning Library, for the future of teaching and learning. With you and your support, we can prepare learners of all ages and future generations to meet tomorrow’s challenges and improve education at MIT and around the globe.<br><br>
+                                    <a href="https://giving.mit.edu/give/to?fundId=3894990" target="_blank">Please support Open Learning with a gift today.</a> If a gift isn’t possible at this time, you can also contribute by <a href="https://forms.gle/Wj1vhLa4agaLUHeV7" target="_blank">sharing your experience with Open Learning</a> resources and what impact they have had in your life.<br><br>
+                                    <i>Read more about our <a href="https://impact-openlearning.mit.edu/2022-open-learning-report" target="_blank">work in the annual impact report.</i></a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </section>
+                <blockquote class="student-quote">
+                    I cannot overstate the impact that MIT Open Learning has had on my education. I have been a student of MOOCs for several years now, and the courses offered by MIT Open Learning have been some of the most impactful and useful that I have taken. I have been able to take courses on a wide variety of topics, and the quality of the content and the instructors has been consistently excellent. I have also been able to use the courses I have taken to further my career, as many of the topics covered are directly relevant to the work I do. I am extremely grateful to have had the opportunity to take advantage of MIT Open Learning, and I would highly recommend it to anyone who is looking for a high-quality, affordable education.
+                    <div>-Hikmat, Student - College/University, Nepal</div>
+                </blockquote>
             </div>
             <div class="socialmedia-area">
                 <ul class="socialmedia-list">
