scroll to the faq when clicked on the why support link in the footer

--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="accordion-title">Why support Open Learning?</div>
+                            <div class="accordion-title" id="support_mit_faq_title">Why support Open Learning?</div>
                             <div class="accordion-content">
                                 <p>
                                     Each course in the Open Learning Library is a collaborative effort by a team of MIT faculty, educational technologists, media specialists, intellectual property coordinators, digital learning fellows, and others. Gifts to MIT Open Learning directly support the sustainability and production of these courses.<br><br>
