--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -112,8 +112,8 @@
                                 <p>The MIT faculty member responsible for the course makes this decision on a case-by-case basis. This is why you may see different formats for each different course you access in the Open Learning Library. Most often, though, what you will see is the content and assessments that you need to work through in order to learn, while other assessments whose principal purpose is testing whether you have earned a certificate are only available on edX.org, where you can have the opportunity to earn a certificate.</p>
                             </div>
                         </div>
-                        <div class="item">
-                            <div class="accordion-title" id="support_mit_faq_title">Why support Open Learning?</div>
+                        <div class="item" id="why_support_mit_faq">
+                            <div class="accordion-title">Why support Open Learning?</div>
                             <div class="accordion-content">
                                 <p>
                                     Each course in the Open Learning Library is a collaborative effort by a team of MIT faculty, educational technologists, media specialists, intellectual property coordinators, digital learning fellows, and others. Gifts to MIT Open Learning directly support the sustainability and production of these courses.<br><br>
