appended the element id in front of the about link and added check for url
* scroll to the faq when clicked on the why support link in the footer

* changed the time of animation

* appended the element id in front of the about link and added check for url

* used slideDown instead to css display block

--- a/mitx/lms/templates/footer.html
+++ b/mitx/lms/templates/footer.html
@@ -27,7 +27,7 @@
           <li><a href="${marketing_link('ABOUT')}">${_("About")}</a></li>
           <li><a href="https://accessibility.mit.edu/">${_("Accessibility")}</a></li>
           <li><a href="${marketing_link('COURSES')}">${_("All Courses")}</a></li>
-          <li><a target="_blank" href="${marketing_link('DONATE')}">${_("Why Support MIT Open Learning?")}</a></li>
+          <li><a href="${marketing_link('ABOUT')}#why_support_mit_faq">${_("Why Support MIT Open Learning?")}</a></li>
           <li><a href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">${_("Help")}</a></li>
         </ol>
         <ul>
