--- a/mitx/lms/static/sass/shared-v2/_header.scss
+++ b/mitx/lms/static/sass/shared-v2/_header.scss
@@ -3,16 +3,14 @@
     position: relative;
     z-index: 100;
     border-bottom-color: $light-blue-gray;
-    @include padding(($baseline*0.5), 0, ($baseline*0.5), 0);
     @include media-up(sm) {
         overflow: visible;
-        @include padding(($baseline*0.75), 0, ($baseline*0.75), 0);
     }
 
     .nav-links {
         @include media-up(md) {
-            width: 80%;
-            @include padding($baseline*0.75, 0, $baseline*0.75, 0);
+            width: 100%;
+            padding: $baseline*0.75;
         }
 
         .is-authenticated & {
@@ -234,8 +232,6 @@
 .main-header {
     @include clearfix;
     @include padding(0, ($baseline*0.75), 0, ($baseline*0.75));
-    margin: auto;
-    max-width: $container-default;
     @include media-down(md) {
         height: auto !important;
     }
@@ -305,11 +301,58 @@
         display: block;
         margin: 0;
         @include text-align(left);
-        @include media-up(sm) {
-            min-width: 300px;
-        }
+        padding-right: 15px;
         @include media-up(md) {
             display: table;
+            border-right: 3px solid lightgray;
+            min-width: 300px;
+        }
+
+        > * {
+            @include media-up(md) {
+                display: table-cell !important;
+                float: none !important;
+                vertical-align: middle;
+            }
+        }
+
+        a {
+            display: inline-block;
+            float: none;
+            margin: 0;
+            padding-top: 8px;
+            height: auto;
+            @include media-up(sm) {
+                padding-top: 5px;
+            }
+            @include media-up(md) {
+                padding-top: 0;
+            }
+
+            .logo {
+                margin: 0;
+                height: ($baseline*1.4);
+                @include media-up(sm) {
+                    height: auto;
+                }
+            }
+        }
+
+        .course-header {
+            margin: 0;
+            @include text-align(left);
+            @include padding-left($baseline);
+        }
+    }
+
+    .branding-logo {
+        display: block;
+        margin: 0;
+        @include text-align(left);
+        @include media-up(md) {
+            display: table;
+            border-left: 3px solid lightgray;
+            @include text-align(right);
         }
 
         > * {
@@ -332,19 +375,14 @@
                 padding-top: 0;
             }
 
-            .logo {
+            .branding_logo {
                 margin: 0;
                 height: ($baseline*1.4);
+                max-width: 100px;
                 @include media-up(sm) {
                     height: auto;
                 }
             }
-        }
-
-        .course-header {
-            margin: 0;
-            @include text-align(left);
-            @include padding-left($baseline);
         }
     }
 }
