fix: remove global padding and add branding-logo to navbar

--- a/mitx/lms/templates/header/navbar-branding-logo-header.html
+++ b/mitx/lms/templates/header/navbar-branding-logo-header.html
@@ -15,7 +15,7 @@ from branding import api as branding_api
 
 
 <h1 class="branding-logo">
-    <a href="${branding_api.get_mit_url()}" target="_blank">
+    <a href="https://web.mit.edu" target="_blank">
       <%block name="navigation_logo">
       <img  class="branding_logo" src="${static.url('images/branding_logo.svg')}" alt="${_('{platform_name} Home Page').format(platform_name=static.get_platform_name())}"/>
       </%block>
