--- a/mitx/lms/templates/header/navbar-not-authenticated.html
+++ b/mitx/lms/templates/header/navbar-not-authenticated.html
@@ -52,3 +52,4 @@ from six import text_type
     </div>
   </div>
 </nav>
+<%include file="navbar-branding-logo-header.html"  args="online_help_token=online_help_token"/>
