--- a/mitx/lms/static/sass/shared-v2/_header.scss
+++ b/mitx/lms/static/sass/shared-v2/_header.scss
@@ -2,6 +2,7 @@
     box-shadow: none;
     position: relative;
     z-index: 100;
+    padding: 0px;
     border-bottom-color: $light-blue-gray;
     @include media-up(sm) {
         overflow: visible;
@@ -306,6 +307,8 @@
             display: table;
             border-right: 3px solid lightgray;
             min-width: 300px;
+            padding-top: 20px;
+            padding-bottom: 20px;
         }
 
         > * {
@@ -352,6 +355,7 @@
         @include media-up(md) {
             display: table;
             border-left: 3px solid lightgray;
+            padding-left: 15px;
             @include text-align(right);
         }
 
