fix: Add horizontal padding to nav links on authenticate

--- a/mitx/lms/static/sass/shared-v2/_header.scss
+++ b/mitx/lms/static/sass/shared-v2/_header.scss
@@ -16,7 +16,7 @@
 
         .is-authenticated & {
             @include media-up(md) {
-                @include padding($baseline*0.65, 0, $baseline*0.65, 0);
+                @include padding($baseline*0.65, $baseline*0.7, $baseline*0.65, $baseline*0.7);
             }
         }
 
