--- a/mitx/lms/templates/header/navbar-authenticated.html
+++ b/mitx/lms/templates/header/navbar-authenticated.html
@@ -35,6 +35,14 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
       </a>
     </div>
     % if show_dashboard_tabs:
+      % if show_program_listing:
+        <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
+          <a class="${'active ' if reverse('program_listing_view') in request.path else ''}tab-nav-link" href="${reverse('program_listing_view')}"
+             aria-current="${'page' if reverse('program_listing_view') == request.path else 'false'}">
+             ${_("Programs")}
+          </a>
+        </div>
+      % endif
       % if show_journal_listing:
         <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
           <a class="${'active ' if reverse('openedx.journals.dashboard') in request.path else ''}tab-nav-link" href="${reverse('openedx.journals.dashboard')}"
